<?xml version="1.0" encoding="utf-8"?>
<com.linecy.dilidili.ui.misc.ViewContainer
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/viewContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:inAnimation="@android:anim/fade_in"
    android:outAnimation="@android:anim/fade_out"
    >
  <android.support.constraint.ConstraintLayout
      android:id="@+id/content"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      >
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weekday7"
        />

    <TextView
        android:id="@+id/weekday7"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/weekday7"
        app:layout_constraintEnd_toStartOf="@+id/weekday1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/WeekStyle"
        />
    <TextView
        android:id="@+id/weekday1"
        android:text="@string/weekday1"
        app:layout_constraintBottom_toBottomOf="@+id/weekday7"
        app:layout_constraintEnd_toStartOf="@+id/weekday2"
        app:layout_constraintStart_toEndOf="@+id/weekday7"
        app:layout_constraintTop_toTopOf="@+id/weekday7"
        style="@style/WeekStyle"
        />
    <TextView
        android:id="@+id/weekday2"
        android:text="@string/weekday2"
        app:layout_constraintBottom_toBottomOf="@+id/weekday1"
        app:layout_constraintEnd_toStartOf="@+id/weekday3"
        app:layout_constraintStart_toEndOf="@+id/weekday1"
        app:layout_constraintTop_toTopOf="@+id/weekday1"
        style="@style/WeekStyle"
        />
    <TextView
        android:id="@+id/weekday3"
        android:text="@string/weekday3"
        app:layout_constraintBottom_toBottomOf="@+id/weekday2"
        app:layout_constraintEnd_toStartOf="@+id/weekday4"
        app:layout_constraintStart_toEndOf="@+id/weekday2"
        app:layout_constraintTop_toTopOf="@+id/weekday2"
        style="@style/WeekStyle"
        />
    <TextView
        android:id="@+id/weekday4"
        android:text="@string/weekday4"
        app:layout_constraintBottom_toBottomOf="@+id/weekday3"
        app:layout_constraintEnd_toStartOf="@+id/weekday5"
        app:layout_constraintStart_toEndOf="@+id/weekday3"
        app:layout_constraintTop_toTopOf="@+id/weekday3"
        style="@style/WeekStyle"
        />
    <TextView
        android:id="@+id/weekday5"
        android:text="@string/weekday5"
        app:layout_constraintBottom_toBottomOf="@+id/weekday4"
        app:layout_constraintEnd_toStartOf="@+id/weekday6"
        app:layout_constraintStart_toEndOf="@+id/weekday4"
        app:layout_constraintTop_toTopOf="@+id/weekday4"
        style="@style/WeekStyle"
        />
    <TextView
        android:id="@+id/weekday6"
        android:text="@string/weekday6"
        app:layout_constraintBottom_toBottomOf="@+id/weekday5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/weekday5"
        app:layout_constraintTop_toTopOf="@+id/weekday5"
        style="@style/WeekStyle"
        />

  </android.support.constraint.ConstraintLayout>

</com.linecy.dilidili.ui.misc.ViewContainer>