<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
  <android.support.constraint.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/white"
      tools:ignore="RtlHardcoded,ContentDescription"
      >

    <ImageView
        android:id="@+id/ivAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_avatar"
        />
    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4"
        />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:maxLines="1"
        android:text="@string/app_name"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/font_small"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/ivAvatar"
        app:layout_constraintStart_toStartOf="@+id/ivAvatar"
        app:layout_constraintTop_toBottomOf="@+id/ivAvatar"
        />
    <TextView
        android:id="@+id/tvUserDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:maxLines="2"
        android:text="@string/app_detail"
        android:textColor="@color/textSecondary"
        android:textSize="@dimen/font_smaller"
        app:layout_constraintEnd_toEndOf="@+id/ivAvatar"
        app:layout_constraintStart_toStartOf="@+id/ivAvatar"
        app:layout_constraintTop_toBottomOf="@+id/tvUserName"
        />
    <TextView
        android:id="@+id/tvUserSetting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_action_more_arrow_dark"
        android:drawableLeft="@drawable/ic_face_24dp"
        android:drawablePadding="@dimen/padding_smaller"
        android:drawableRight="@drawable/ic_action_more_arrow_dark"
        android:drawableStart="@drawable/ic_face_24dp"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_smaller"
        android:text="@string/user_setting"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/font_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        />
    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/divider"
        android:background="@color/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUserSetting"
        />
    <TextView
        android:id="@+id/tvPlayerSetting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_action_more_arrow_dark"
        android:drawableLeft="@drawable/ic_settings_24dp"
        android:drawablePadding="@dimen/padding_smaller"
        android:drawableRight="@drawable/ic_action_more_arrow_dark"
        android:drawableStart="@drawable/ic_settings_24dp"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_smaller"
        android:text="@string/player_setting"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/font_small"
        app:layout_constraintEnd_toEndOf="@+id/tvUserSetting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUserSetting"
        />
    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/divider"
        android:background="@color/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPlayerSetting"
        />
    <TextView
        android:id="@+id/tvAbout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_action_more_arrow_dark"
        android:drawableLeft="@drawable/ic_info_24dp"
        android:drawablePadding="@dimen/padding_smaller"
        android:drawableRight="@drawable/ic_action_more_arrow_dark"
        android:drawableStart="@drawable/ic_info_24dp"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_smaller"
        android:text="@string/about"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/font_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPlayerSetting"
        />
    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/divider"
        android:background="@color/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAbout"
        />
  </android.support.constraint.ConstraintLayout>
</layout>